# Architecture535-ISA

./: .gitignore  CMakeLists.txt  Documentation.md  Proposal.md  README.md  Specs.md  Specs.txt
assembler/: README.md  assembler.c  assembler.h  instructionset.c
documents/: Proposal.md  README.md  Specs.txt  specifications.md
gui/: 4x4matrixmul.txt.txt  6x6.txt  README.md  alu&branch.txt  alu.txt  alutest.txt  api.py  branch.txt  globals.py  hazards.txt  interface.c  interface.py  matrixmul.txt  memory&alu.txt  memory.txt  memtest.txt  requirements.txt  shift.txt.txt  testasm.txt  testasm2.txt
gui/benchmarks/: 4x4Sol.txt  branch.txt  exchangesort.txt.txt  hazards.txt  matrixmul.txt  memory.txt  shift.txt  two-way.txt
programs/: README.md
scripts/: README.md
scripts/Linux/: compile.sh  run_all.sh  run_api.sh  run_interface.sh
scripts/Windows/: compile.bat  run_all.bat  run_api.bat  run_interface.bat
simulator/: CMakeLists.txt  Makefile  README.md  branch_test.txt  globals.c  globals.h  hazards.c  hazards.h  loop.c  memory.c  memory.h  pipeline.c  pipeline.h  simulator  simulator.c  simulator.h  utilities.c  utilities.h
simulator/include/: assembler.h  decode.h  execute.h  fetch.h  globals.h  memory.h  memory_access.h  pipeline.h  write_back.h
simulator/pipeline/: decode.c  decode.h  execute.c  execute.h  fetch.c  fetch.h  memory_access.c  memory_access.h  pipeline.h  write_back.c  write_back.h
simulator/src/: assembler.c  globals.c  hazards.c  memory.c  pipeline.c  simulator.c
simulator/src/pipeline/: decode.c  execute.c  fetch.c  memory_access.c  write_back.c
tests/: HazardTests.cpp  MemoryTests.cpp  PipelineTests.cpp  README.md
